k8s/traefik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  labels:
    app.kubernetes.io/version: 2.0.6
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/version: 2.0.6
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      containers:
      - name: traefik
        image: traefik:2.0.6
        imagePullPolicy: Always
        args:
        - --api.insecure
        - --accesslog
        - --entrypoints.web.Address=:1080
        - --entrypoints.websecure.Address=:1443
        - --entrypoints.traefik.Address=:8080
        - --providers.kubernetescrd
        - --providers.kubernetesingress

        ports:
        - containerPort: 1080
          name: http
          protocol: TCP
        - containerPort: 1443
          name: https
          protocol: TCP
        - containerPort: 8080
          name: admin
          protocol: TCP

        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 200m
            memory: 200Mi
