k8s/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
---

apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  ports:
  - name: http
    port: 80
    targetPort: admin
